--- a/config/database.yml
+++ b/config/database.yml
@@ -19,20 +19,27 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
+
+credentials: &credentials
+  host: <%= ENV['DATABASE_HOST'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
 
 development:
   <<: *default
-  database: national_budgets_development
+  <<: *credentials
+  database: <%= ENV.fetch("DATABASE_NAME") { "national_budgets_development" } %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: national_budgets
+  # username: national_budgets
 
   # The password associated with the postgres role (username).
-  #password:
+  # password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,7 +64,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: national_budgets_test
+  <<: *credentials
+  database: <%= ENV.fetch("DATABASE_NAME") { "national_budgets_test" } %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +88,4 @@ test:
 #
 production:
   <<: *default
-  database: national_budgets_production
-  username: national_budgets
-  password: <%= ENV['NATIONAL_BUDGETS_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
