--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,14 +2,20 @@ require: rubocop-rails
 
 AllCops:
   Include:
-    - Rakefile
-    - config.ru
+    - '/**/*.arb'
+    - '/**/*.rb'
+    - '/**/*.gemfile'
+    - '/**/*.gemspec'
+    - '/**/*.rake'
+    - '/**/*.ru'
+    - '/Gemfile'
+    - '/Rakefile'
+
   Exclude:
-    - bin/**
-    - db/**
-    - config/**
-    - script/**
-    - vendor/**/* # Circle adds the rubies here
+    - 'db/schema.rb'
+    - 'db/seeds.rb'
+    - 'vendor/**/*'
+    - 'bin/*'
 
 Metrics/LineLength:
   Max: 140
