Add rubocop-rails gem and correct new offenses (#22)
* Bundle dependencies

* Install gem rubocop-rails

* Require rubocop-rails config

* Remove .rubocop_todo.yml

* Modify Rubocop gem configuration

* 23 Rubocop offenses automatically corrected

* 22 Rubocop offenses manually corrected

* Some fixes in Rubocop configuration

* Correct Rubocop offenses

* Allow to reset section in new modification

* Add collection title to browsing inputs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,18 +1,24 @@
-inherit_from: .rubocop_todo.yml
+require: rubocop-rails
 
 AllCops:
   Include:
-    - Rakefile
-    - config.ru
+    - '**/*.arb'
+    - '**/*.rb'
+    - '**/*.gemfile'
+    - '**/*.gemspec'
+    - '**/*.rake'
+    - '**/*.ru'
+    - '**/Gemfile'
+    - '**/Rakefile'
+
   Exclude:
-    - bin/**
-    - db/**
-    - config/**
-    - script/**
-    - vendor/**/* # Circle adds the rubies here
+    - 'db/schema.rb'
+    - 'db/seeds.rb'
+    - 'vendor/**/*'
+    - 'bin/*'
+
+Style/Documentation:
+  Enabled: false
 
 Metrics/LineLength:
   Max: 140
-
-Documentation:
-  Enabled: false
