--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 /public/assets
 .byebug_history
 
+# coverage reports
+/coverage/*
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 .env
