--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,3 +24,15 @@ Style/Documentation:
 
 Metrics/LineLength:
   Max: 140
+
+Metrics/BlockLength:
+  Enabled: true
+  Exclude:
+    - config/environments/*.rb
+    - spec/**/*_spec.rb
+    - spec/factories/*.rb
+
+Metrics/MethodLength:
+  Enabled: true
+  Exclude:
+    - db/migrate/*.rb
