Configure Rspec and initial tests (#24)
* Delete generated tests

* Add gem rspec-rails

* Generate rspect's boilerplate configuration files

rails generate rspec:install

* Add gem rubocop-rspec

* Add gem rack-test and configure it

* Add gem factory_bot_rails and configure it

* Add gem simplecov and configure it

* Fix some Rubocop offenses

* Remove file

* Implement presence validations

* Add faker gem, configure it and bump dependencies

* Modify pro a test databases names

* Put FactoryBot config in separate file

* Create factories for the models

* Create specs for the main models

* Fix missing belongs_to user

* Remove unnecessary section methods

* Fix Rubocop offense

* Capybara config and autocorrection of Rubocop offense

* Move test gems to test enviroment

* Restore production database url

* Add directories to exclude from BlockLength and MethodLength rules in Rubocop

* More descriptive variable name

* Fix Rubocop ofense of  insecure html_safe

* Add any_ prefix

* Remove unnecessary Rubocop comments

* Fix Rspec configuration

* Refactorize unit tests

* 'Amendment creation' integration test

* Property modifications can't be nil

* safe_join & 1 articulated in with_articulated standard_amendment factory

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
-require: rubocop-rails
+require: 
+  - rubocop-rails
+  - rubocop-rspec
 
 AllCops:
   Include:
@@ -22,3 +24,15 @@ Style/Documentation:
 
 Metrics/LineLength:
   Max: 140
+
+Metrics/BlockLength:
+  Enabled: true
+  Exclude:
+    - config/environments/*.rb
+    - spec/**/*_spec.rb
+    - spec/factories/*.rb
+
+Metrics/MethodLength:
+  Enabled: true
+  Exclude:
+    - db/migrate/*.rb
