--- a/config/database.yml
+++ b/config/database.yml
@@ -65,7 +65,7 @@ development:
 test:
   <<: *default
   <<: *credentials
-  database: <%= ENV.fetch("DATABASE_NAME") { "national_budgets_test" } %>
+  database: <%= ENV.fetch("DATABASE_TEST_NAME") { "national_budgets_test" } %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
