--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2
 jobs:
   main:
     docker:
-      - image: circleci/ruby:2.6.3-node
+      - image: circleci/ruby:2.6.3-node-browsers
         environment:
           DATABASE_USERNAME: postgres
 
@@ -63,7 +63,7 @@ jobs:
           command: /tmp/cc-test-reporter upload-coverage --input /tmp/codeclimate.json
 
       - store_artifacts:
-          path: /root/project/tmp/screenshots
+          path: tmp/screenshots
 
 workflows:
   version: 2
