--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,6 +38,10 @@ Metrics/MethodLength:
   Exclude:
     - db/migrate/*.rb
 
+Metrics/AbcSize:
+  Exclude:
+    - db/migrate/*.rb
+
 RSpec/MultipleExpectations:
   Exclude:
     - spec/system/**/*_spec.rb
