Use directorio_client gem for get user role

--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,7 @@ AIRBRAKE_API_KEY=
 DIRECTORIO_SERVER=
 DIRECTORIO_EXIT_URL=
 DIRECTORIO_APP_ID=
+DIRECTORIO_OBJECT=
+DIRECTORIO_SYSTEM_USER=
 
 CAS_SERVER=
