--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -5,6 +5,7 @@ default: &default
     version: 1
     exit_url: <%= ENV["DIRECTORIO_EXIT_URL"] %>
     system_user: <%= ENV["DIRECTORIO_SYSTEM_USER"] %>
+    object: <%= ENV["DIRECTORIO_OBJECT"] %>
 
 development:
   <<: *default
