--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,5 +1,11 @@
 default: &default
   cas_server: <%= ENV["CAS_SERVER"] %>
+  directorio:
+    server: <%= ENV["DIRECTORIO_SERVER"] %>
+    version: 1
+    exit_url: <%= ENV["DIRECTORIO_EXIT_URL"] %>
+    system_user: <%= ENV["DIRECTORIO_SYSTEM_USER"] %>
+    object: <%= ENV["DIRECTORIO_OBJECT"] %>
 
 development:
   <<: *default
