--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,6 +31,7 @@ Metrics/BlockLength:
     - app/admin/*.rb
     - config/environments/*.rb
     - config/routes.rb
+    - lib/tasks/national_budgets/*.rake
     - spec/**/*_spec.rb
     - spec/factories/*.rb
 
@@ -50,3 +51,7 @@ RSpec/MultipleExpectations:
 RSpec/ExampleLength:
   Exclude:
     - spec/system/**/*_spec.rb
+
+Style/TrivialAccessors:
+  Exclude:
+    - lib/tasks/national_budgets/*.rake
