--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,12 @@ jobs:
       - image: circleci/ruby:2.6.3-node-browsers
         environment:
           DATABASE_USERNAME: postgres
+          DATABASE_PASSWORD: postgres
 
       - image: postgres
         environment:
           POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
 
     steps:
       - checkout
